[package]
name = "lab_4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = { version = "1.8.0", features = [] }
tokio = { version = "1.34.0", features = ["net", "io-util", "macros", "rt", "rt-multi-thread"] }
